# kn-benchmark

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: cpm.cmake
scripts/: plot_phi.py
src/: main.cpp
